...
                      listProviderViewModel.refreshFilters()
                      display()
                    }
                    .padding(1.dp)
                    .width(18.dp)
                    .height(18.dp)
                    .testTag("filterOption"),
            painter = painterResource(id = R.drawable.vector),
            contentDescription = "image description",
            contentScale = ContentScale.Crop)
      }
}

...
}

@Composable
fun DisplayPopularProviders(providers: List<Provider>) {

  LazyRow(
      modifier = Modifier.fillMaxWidth().padding(16.dp).testTag("popularProviders"),
      horizontalArrangement = Arrangement.spacedBy(10.dp, Alignment.Start),
      verticalAlignment = Alignment.Top,
      userScrollEnabled = true,
  ) {
    items(providers.filter { it.popular }) { provider ->
      Box(modifier = Modifier.clip(RoundedCornerShape(16.dp))) {
...
    Row(
        horizontalArrangement = Arrangement.spacedBy(16.dp),
    ) {
      BasicTextField(
          value = minPrice,
          onValueChange = {
            minPrice = it
            val minPriceValue = it.toDoubleOrNull()
            if (minPriceValue != null) {
              listProviderViewModel.filterProviders(
                  filter = { provider -> provider.price >= minPriceValue }, "Price")
            } else {
              listProviderViewModel.filterProviders(
...
          singleLine = true,
          keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Number))

      BasicTextField(
          value = maxPrice,
          onValueChange = {
            maxPrice = it
            val maxPriceValue = it.toDoubleOrNull()
            val minPriceValue = minPrice.toDoubleOrNull()
            if (maxPriceValue != null && minPriceValue != null && minPriceValue < maxPriceValue) {
              listProviderViewModel.filterProviders(
                  { prvd -> maxPriceValue >= prvd.price }, "Price")
            } else {
...
      horizontalArrangement = Arrangement.spacedBy(8.dp),
      verticalArrangement = Arrangement.spacedBy(8.dp),
  ) {
    repeat(list.size) { idx ->
      Box(
          Modifier.background(color = iconsColor[idx], shape = RoundedCornerShape(size = 8.dp))
              .testTag("filterAct")
              .padding(8.dp)
              .clickable {
                filterStringFields(
                    selectedFields.toMutableList(),
                    iconsPressed.toMutableList(),
                    iconsColor.toMutableList(),
...

@Composable
fun ApplyButton(listProviderViewModel: ListProviderViewModel, display: () -> Unit) {
  val filteredList by listProviderViewModel.providersListFiltered.collectAsState()
  Box(
      modifier =
          Modifier.testTag("applyFilterButton")
              .width(249.dp)
              .height(43.dp)
              .background(
                  brush =
                      Brush.horizontalGradient(
                          colors =
...
  }
}

@Composable
fun FilterComposable(listProviderViewModel: ListProviderViewModel, display: () -> Unit) {
  Column(
      modifier = Modifier.fillMaxWidth().testTag("filterSheet"),
      verticalArrangement = Arrangement.spacedBy(12.dp),
      horizontalAlignment = Alignment.CenterHorizontally) {
        Text(
            text = "Filters",
            style =
                TextStyle(
...
