...
  val passwordLengthComplete = password.length >= 6
  val samePassword = password == confirmPassword

  Scaffold(
      topBar = {
        TopAppBar(
            title = { Text("") },
            navigationIcon = { GoBackButton(navigationActions) },
            colors = TopAppBarDefaults.topAppBarColors(containerColor = colorScheme.background),
            modifier = Modifier.testTag("backButton"))
      },
      content = { padding ->
        Column(
            modifier =
                Modifier.fillMaxSize()
                    .background(colorScheme.background)
...
              PasswordTextField(
                  value = password,
                  onValueChange = { password = it },
                  label = "Password",
                  placeholder = "Enter your password",
                  contentDescription = "Password",
                  testTag = "passwordInput")

              VerticalSpacer(height = 10.dp)

              // Confirm Password Field
              PasswordTextField(
                  value = confirmPassword,
                  onValueChange = { confirmPassword = it },
                  label = "Confirm Password",
                  placeholder = "Re-enter your password",
                  contentDescription = "Confirm Password",
                  testTag = "confirmPasswordInput")

              Text(
                  text = "Password must be at least 6 characters",
                  color = colorScheme.onSurfaceVariant,
                  fontSize = 12.sp,
                  textAlign = TextAlign.Start,
...
                  context, "Your password must have at least 6 characters", Toast.LENGTH_SHORT)
              .show()
        } else {
          Toast.makeText(context, "You are Signed up!", Toast.LENGTH_SHORT).show()
        }
      },
      modifier = Modifier.fillMaxWidth().height(50.dp).testTag("signUpButton"),
      shape = RoundedCornerShape(25.dp),
      colors =
          ButtonDefaults.buttonColors(
              containerColor =
                  if (isComplete && goodFormEmail && samePassword && passwordLengthComplete)
                      colorScheme.secondary
...
  Row(verticalAlignment = Alignment.CenterVertically) {
    Text("Already have an account? ", color = colorScheme.onSurface)
    ClickableText(
        text = AnnotatedString("Log up in here!"),
        onClick = { navigationActions.navigateTo(Screen.SIGN_IN) },
        style = TextStyle(color = colorScheme.primary, textDecoration = TextDecoration.Underline),
        modifier = Modifier.testTag("logInLink"))
  }
}

@Preview
@Composable
fun PreviewSignUpScreen() {
...
